--- a/src/app/close-destinations/close-destinations.component.html
+++ b/src/app/close-destinations/close-destinations.component.html
@@ -1,14 +1,19 @@
-<div class="container" >
+<div class="container">
+    <div class="title-container">
+        <img src="../../assets/aroovia-icons/Icon feather-arrow-left.svg" alt="" class="arrow-img">
+        <p class="title">وجهات قريبة</p>
+    </div>
+    <div class="flex">
 
-    <div class="item" *ngFor="let image of images">
-        <div class="image">
-            <img src={{image.imgsrc}} alt="">
-            <p class="title-name">{{image.title}}</p>
-        </div>
-     
-        <div class="title">
-       
+        <div class="item" *ngFor="let image of images">
+            <div class="image">
+                <img src={{image.imgsrc}} alt="">
+                <p class="title-name">{{image.title}}</p>
+            </div>
+
+            <div class="title">
+
+            </div>
         </div>
     </div>
-
 </div>
