--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,5 +1,5 @@
 <div class="contianer">
-    <div class="just flex">
+    <div class="just flex margin">
         <div class="flex">
             <div class="arrow-icon">
                 <div class="purple-arrow">
