--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -24,6 +24,7 @@ color: #7E7E7E;
     border-bottom: 2px solid #E8E8E8;
 }
 .categoryTitle{
+    padding-top:50px;
     color: #7E7E7E;
     font-size: 16px;
 }
@@ -32,9 +33,10 @@ color: #7E7E7E;
 }
 
 .footer-container{
+    padding-top: 50px;
     display: flex;
 }
-.terms-and-conditions{
+.terms-and-conditions{ 
     display: flex;
 }
 .list{
