--- a/src/app/might-like/might-like.component.html
+++ b/src/app/might-like/might-like.component.html
@@ -1,16 +1,16 @@
 <div class="contianer">
     <div class="just flex">
-        <div class="flex">
+        <div class="flex-arrow">
             <div class="arrow-icon">
                 <mat-icon class="purple-arrow">arrow_back</mat-icon>
             </div>
-            <div class="title">
+            <div class="title ">
                 {{title}}
             </div>
         </div>
     
-        <div class="flex">
-            <div class="filter-title">
+        <div class="flex-filter">
+            <div class="filter-title ">
                 {{mighttitle}}
             </div>
     
