--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                         <p>اضف عقارك</p>
                     </button>
                     <button class="login" mat-button (click)="openDialog()">
-                        <p>تسجيل الدخول أو الاشتراك</p>
+                        <p class="add-padding">تسجيل الدخول أو الاشتراك</p>
                     </button>
                     <div>
                         <div class="profile" (click)="openProfileList()">
@@ -35,8 +35,8 @@
                         </div>
                     </div>
                     <div class="language">
-                        <p class="languageLabel">{{languge}}</p>
                         <mat-icon>arrow_drop_down</mat-icon>
+                        <p class="languageLabel">{{languge}}</p>
                     </div>
                 </div>
             </div>
