--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 
 
-<!-- <router-outlet>
-    
 <app-navbar></app-navbar>
+ <router-outlet>
+    
+
 </router-outlet>
 
 <app-footer></app-footer>
 
 
 
-<app-signin></app-signin> -->
 
