--- a/src/app/close-destinations/close-destinations.component.css
+++ b/src/app/close-destinations/close-destinations.component.css
@@ -1,9 +1,12 @@
 .container{
     direction: rtl;
+    padding-left: 10%;
+    padding-right: 10%; 
+   margin-bottom: 42px;
+}
+.flex{
     display: flex;
     gap: 30px;
-    padding-left: 10%;
-    padding-right: 10%;
     flex-wrap: wrap;
 }
 .image{
@@ -13,9 +16,7 @@
   
   
 }
-.item{
-    
-}
+
 .image img{
     width: 100%;
     height: 100%;
@@ -36,4 +37,19 @@
 .title-name{
     position: absolute;
     font-family: 'black';
+}
+.title{
+    font-size: 24.75px;
+    font-family: 'black';
+}
+.title-container{
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+}
+.title-container p{
+    margin: 0;
+}
+.arrow-img{
+    margin-left: 15px;
 }
