--- a/src/app/deals/deals.component.css
+++ b/src/app/deals/deals.component.css
@@ -1,13 +1,26 @@
-.img-container{
-    width: 460px;
-    height: 204px;
-}
-.img{
-    width: 100%;
-    height: 100%;
-}
+ 
+
 
 .container{
     padding-left: 10%;
     padding-right: 10%;
+    margin-bottom: 46px;
+}
+.title{
+    font-size:24.75px;
+    font-family: 'black';
+}
+.rtl{
+    direction: rtl;
+}
+.flex{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.arrow-img{
+    padding-left: 15px;
+}
+.flex p{
+    margin: 0px;
 }
