--- a/src/app/deals/deals.component.html
+++ b/src/app/deals/deals.component.html
@@ -1,16 +1,16 @@
-
 <div class="container">
+  <div class="rtl flex">
+    <img src="../../assets/aroovia-icons/Icon feather-arrow-left.svg" alt="" class="arrow-img">
+    <p class="title">عروض</p>
+  </div>
+
   <owl-carousel-o [options]="customOptions">
 
     <ng-container *ngFor="let slide of slidesStore">
-      <ng-template carouselSlide >
-        <div class="img-container">
-          <img class="img" [src]="slide.src">
-        </div>
-       
+      <ng-template carouselSlide [id]="slide.id">
+        <img [src]="slide.src" [alt]="slide.alt" >
       </ng-template>
     </ng-container>
-  
+
   </owl-carousel-o>
-  
 </div>
