--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -3,6 +3,7 @@
     font-family: 'black';
     text-align: center;
     color: #000000;
+
 }
 
 .container {
@@ -58,6 +59,7 @@ input {
     width: 100%;
     border-radius: 20px;
     padding-bottom: 10px;
+    margin-top: 66px;
 }
 
 mat-dialog-content {
@@ -123,7 +125,7 @@ button.submitButton {
 
 .left {
     display: flex;
-    justify-content: end;
+    justify-content: start;
 }
 
 .code {
@@ -249,6 +251,7 @@ button.submitButton {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    margin-top: 20px;
 }
 .image{
     width: 35px;
@@ -272,6 +275,7 @@ border-radius: 20px;
 .email-input{
     width: 90%;
     padding-right:5px ;
+    margin-top: 66px;
 
 }
 
@@ -291,4 +295,15 @@ border-radius: 20px;
 .apple-logo{
     width: 34px;
     height: 34px;
+}
+
+.icon-text{
+    font-size: 11px;
+    font-family: 'heavy';
+    color: #A3A3A3;
+    text-align: center;
+    margin-top: 30px;
+}
+mat-dialog{
+    border-radius: 50px;
 }
