--- a/src/app/search-results/search-results.component.css
+++ b/src/app/search-results/search-results.component.css
@@ -43,6 +43,7 @@
 .header{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 45px;
 }
 .navigation{
 
@@ -50,6 +51,8 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+    margin-top:88.07px;
+    margin-bottom:90.07px;
 }
 .navigation p{
     font-family: 'medium';
@@ -64,7 +67,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 50%;
 }
 .active p{
     margin:0px;
