--- a/src/app/search-results/search-results.component.css
+++ b/src/app/search-results/search-results.component.css
@@ -1,7 +1,6 @@
 .container{
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 5%;
     direction: rtl;
  
 }
@@ -44,6 +43,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 45px;
+    margin-top: 48px;
 }
 .navigation{
 
