--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -5,10 +5,9 @@
             <p class="title"> {{downloadTitle}}</p>
             <p class="subtitle">{{downloadSubTitle}}</p>
         </div>
-        <div>
+        <div class="images">
             <img src="assets/aroovia-icons/Group 105.svg" alt="">
             <img src="assets/aroovia-icons/Group 107.svg" alt="">
         </div>
     </div>
-
 </div>
