--- a/src/app/download/download.component.css
+++ b/src/app/download/download.component.css
@@ -11,7 +11,8 @@
     font-size: 18px;
     /* text-align: center; */
     font-family: 'medium';
-    margin: 0px !important;
+ 
+
 }
 
 .download-img{
@@ -33,10 +34,14 @@
 }
 .center div{
     display: flex;
-    gap: 20px;
+    /* gap: 20px; */
+    margin-left:20px;
 }
 .text{
     display: flex;
     flex-direction: column;
 
+}
+.images img{
+    margin-left:9.15px;
 }
