--- a/src/app/download/download.component.css
+++ b/src/app/download/download.component.css
@@ -45,3 +45,11 @@
 .images img{
     margin-left:9.15px;
 }
+
+@media screen and (max-width: 800px){
+    .center{
+        flex-direction: column;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+}
