--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="nav-link-container" *ngIf="!isSearchRoute" >
+            <div class="nav-link-container" *ngIf="!isSearchRoute && !isHomeRoute" >
                 <div class="nav-link">
                     <p>الملف الشخصي</p>
                 </div>
