--- a/src/external-styles.css
+++ b/src/external-styles.css
@@ -82,16 +82,16 @@ app-deals .owl-dots.active span {
 
 
 app-deals .owl-dot.active span{
-    border:0.5px solid black;
-    background-color: white !important;
+    background: #869791;
+    border: 2px white solid;
     width: 12px;
     height: 12px;
 
 }
 
 app-header-carousel .owl-dot span{
-    border:0.5px solid black;
-    background-color: black !important;
+    background: #869791;
+    border: 2px white solid;
     width: 12px;
     height: 12px;
 }
@@ -109,4 +109,16 @@ app-header-carousel .owl-dots{
 app-footer app-app-category-item{
     padding-top:18px;
     padding-top:20px;
+}
+app-card .card-container::-webkit-scrollbar{
+    display: none;
+}
+app-search-results app-categories app-category-item .category-container{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+app-navbar .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background: #869791;
+    border: 2px white solid;
 }
