--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -18,11 +18,11 @@
       </div>
     </div>
     <div class="location flex muted">
-      <p> {{card.location_city}}</p>
+      <p class="custom-margin"> {{card.location_city}}</p>
       <div class="comma">
         <p>،</p>
       </div>
-      <p>{{card.location_country}}</p>
+      <p class="custom-margin">{{card.location_country}}</p>
     </div>
     <div class="rate">
       <div class="price">
