--- a/src/app/category-item/category-item.component.css
+++ b/src/app/category-item/category-item.component.css
@@ -27,3 +27,17 @@
     text-align: center;
     font-family: 'black';
 }
+.title p{
+    margin-top: 10px;
+}
+@media screen and (max-width: 800px){
+    .category-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .categoryTitle{
+        align-items: center;
+        justify-content: center;
+    }
+}
