--- a/src/app/close-destinations/close-destinations.component.css
+++ b/src/app/close-destinations/close-destinations.component.css
@@ -10,16 +10,17 @@
     flex-wrap: wrap;
 }
 .image{
-    width: 364px;
-    height: 262px;
+    /* width: 364px;
+    height: 262px; */
     position: relative;
-  
+  padding-left: 16px;
+  padding-left: 16px;
   
 }
 
 .image img{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     border-radius: 30px;
 }
 .title-name{
